[project]
name = "logto-fastapi-test"
version = "0.1.0"
description = "logto-fastapi-test"
authors = [{ name = "yixinBC", email = "yixinbc@foxmail.com" }]
dependencies = ["fastapi>=0.110.0", "uvicorn>=0.27.1", "logto>=0.2.0"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
hello = "logto_fastapi_test:main"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
